# CRMQuery-API

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  README.md  index.php  log4rs.yaml  package-lock.json  tsconfig.json  webpack.config.js
.github/workflows/: codeql-analysis.yml
backend/: EspoApiClient.php  api.php  apiValues.php  credentials.php  known_cities.json  typeTransfer.php
docker/: Dockerfile  nginx.conf  run.sh  supervisord.conf
src/: appdata.rs  error.rs  main.rs  result.rs
src/endpoints/: mod.rs  query.rs
src/espocrm/: account.rs  contact.rs  mod.rs
src/scss/: fonts.scss  form.scss  loading_icon.scss  master.scss  result.scss  table.scss
src/ts/: index.ts
