[package]
name = "crm_query"
version = "0.1.0"
authors = ["Tobias de Bruijn <github@thedutchmc.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
serde_yaml = "0.8.17"
espocrm-rs = "0.2.1"
actix-web = "3.3.2"
actix-cors = "0.5.4"
envy = "0.4.2"
log = "0.4.14"

[dependencies.serde]
version = "1.0.123"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.4"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
version = "1.8.2"
default-features = false
features = ["rt", "rt-multi-thread"]

[dependencies.log4rs]
version = "1.0.0"
default-features = false
features = ["console_appender", "config_parsing", "yaml_format"]

[dependencies.authlander-client]
git = "https://github.com/MrFriendly-B-V/AuthlanderClient-rs.git"
tag = "0.1.0"
features = ["actix"]

[profile.release]
lto = true
panic = "abort"